THRIFT-2105 Generated code for default values of collections ignores t_field::T_REQUIRED Client: cpp Patch: Vladimir Strisovsky